# django-kitchen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test_lint.yaml
kitchen/: settings.py  urls.py
kitchen_app/: forms.py  models.py  serializers.py  urls.py  views.py
src/django_kitchen/kitchen/: asgi.py  settings.py  urls.py  wsgi.py
src/django_kitchen/kitchen_app/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
src/django_kitchen/kitchen_app/migrations/: 0001_initial.py  0002_alter_ingredient_name.py  0003_alter_ingredient_price_alter_recipe_category.py
src/django_kitchen/templates/: base_generic.html  index.html
src/django_kitchen/templates/collections/: ingredient_categories.html  ingredients.html  recipe_categories.html  recipes.html
src/django_kitchen/templates/entities/: ingredient.html  recipe.html
src/django_kitchen/templates/pages/: profile.html
src/django_kitchen/templates/registration/: register.html
src/django_kitchen/tests/: runner.py  test_api.py  test_forms.py  test_views.py
templates/: base_generic.html  index.html
templates/collections/: recipes.html
templates/entities/: ingredient.html  recipe.html
templates/pages/: profile.html
templates/registration/: password_reset_done.html
tests/: requirements.txt  runner.py  test.sh  test_api.py
